16-ingress-controller/grade-submission-portal/grade-submission-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grade-submission-portal-ingress
  namespace: grade-submission
spec:
  ingressClassName: nginx #kubectl get ingressclass -> associate this ingress rule with the nginx ingress controller.
  rules:     
  - http: #no Host, thus accepts traffic from any host.
      paths:
      - pathType: Prefix #it will match any path that starts with slash and forward it to the cluster IP service.
        path: "/"    #E.g. localhost:80/
        backend:
          service:
            name: grade-submission-portal
            port: 
              number: 5001
